--- a/src/App.scss
+++ b/src/App.scss
@@ -1,74 +1,149 @@
-.App {
-  text-align: center;
+/* You can add global styles to this file, and also import other style files */
+
+// Custom google font
+@import url("https://fonts.googleapis.com/css?family=Public+Sans:400,600&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Vollkorn:700,900&display=swap");
+
+//Orlando Primary Theme Color
+$genese-primary: #0048C5;
+$primary-font: "Public Sans",
+-apple-system,
+BlinkMacSystemFont,
+"Segoe UI",
+Roboto,
+"Helvetica Neue",
+Arial,
+"Noto Sans",
+sans-serif,
+"Apple Color Emoji",
+"Segoe UI Emoji",
+"Segoe UI Symbol",
+"Noto Color Emoji" !default;
+$secondary-font: "Vollkorn",
+"Karla",
+-apple-system,
+BlinkMacSystemFont,
+"Segoe UI",
+Roboto,
+"Helvetica Neue",
+Arial,
+"Noto Sans",
+sans-serif,
+"Apple Color Emoji",
+"Segoe UI Emoji",
+"Segoe UI Symbol",
+"Noto Color Emoji";
+
+// Bootstrap Variable Override
+
+// $font-size-base: .9375rem;
+$font-family-sans-serif: $primary-font;
+$headings-font-family: $secondary-font;
+$body-bg: #F5F7F9;
+$gray-800: #323751;
+$btn-font-weight: 700;
+$btn-font-size: .9375rem;
+$font-weight-base: 400;
+$input-font-weight: 400;
+$headings-font-weight: 700;
+//$enable-gradients: true;
+// $navbar-brand-font-size: 1.25rem;
+$primary: $genese-primary;
+$theme-colors: ("primary": $genese-primary,
+    "danger": #FC574D);
+
+
+// Bootstrap SCSS import
+@import "../node_modules/bootstrap/scss/bootstrap";
+
+
+// Custom SCSS codes
+
+
+html {
+    height: 100%;
 }
 
-.App-logo {
-  height: 10vmin;
-  pointer-events: none;
+body {
+    height: 100%;
+    //    font-family: 'Rubik', sans-serif;
+    position: relative;
+    background-color: #f7f8fc;
+    background-size: 100px;
+    background-repeat: no-repeat;
+    background-position: 100% -10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 10vh;
-  display: block;
-  align-items: right;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h3 {
+    font-size: 48px;
 }
 
-.App-link {
-  color: #61dafb;
+.font {
+    &-primary {
+        font-family: $primary-font;
+    }
+
+    &-secondary {
+        font-family: $secondary-font;
+    }
 }
 
-.App-dark-font {
-  color: #282c34;
-  font-weight: 400;
+p {
+    margin-bottom: 0.5rem;
 }
 
-.App-carousel {
-  height: 480px;
-  width: 100%;
+.navbar {
+    min-height: 90px;
+
+    .navbar-brand {
+        img {
+            height: auto;
+            width: 120px;
+        }
+    }
+
+    .navbar-nav > a,
+    .nav-item > a {
+        padding: 0 20px !important;
+        letter-spacing: 0.3px;
+    }
+
+    .dropdown-toggle {
+        &::after {
+            vertical-align: 0.1em;
+        }
+    }
+
+    &.navbar-light {
+        .navbar-nav {
+            .nav-link {
+                color: #000;
+            }
+        }
+    }
+
+    @media screen and (min-width: 992px) {
+        .mega-menu {
+            position: static;
+
+            .dropdown-menu {
+                width: 100%;
+                left: 0;
+                right: 0;
+                top: 90px;
+                background: #145970;
+                border-radius: 0;
+                min-height: 300px;
+                margin: 0;
+                color: #fff;
+            }
+        }
+    }
 }
 
-.App-banner {
-  padding-left: 12%;
-}
-
-.App-carousel-caption {
-  position: absolute;
-  right: 45%;
-  bottom: 20px;
-  left: 12%;
-  z-index: 10;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  text-align: left;
-  color: #fff;
-}
-
-.App-carousel-caption-dark {
-  color: #282c34;
-}
-
-.App-small-print {
-  font-size: 10px;
-}
-
-.App-cards {
-  display: flex;
-  text-align: center;
-}
-
-.App-cards-img {
-  height: "15rem";
-}
-
-.App-jumbotron {
-  justify-content: left;
-  text-align: justify;
-  padding-left: 12%;
-  padding-right: 10%;
-  padding-top: 2%;
-  padding-bottom: 1%;
-  margin-bottom: 0;
+.carousel {
+    .carousel-item {
+        max-height: 768px !important;
+        object-fit: contain;
+    }
 }
