--- a/src/App.scss
+++ b/src/App.scss
@@ -52,12 +52,12 @@ $headings-font-weight: 700;
 $primary: $genese-primary;
 $secondary: $genese-secondary;
 $theme-colors: ("primary": $genese-primary,
-    "secondary": $genese-secondary,
-    "danger": #FC574D);
+	"secondary": $genese-secondary,
+	"danger": #FC574D);
 $container-max-widths: (sm: 540px,
-    md: 720px,
-    lg: 960px,
-    xl: 1210px);
+	md: 720px,
+	lg: 960px,
+	xl: 1210px);
 
 
 // Bootstrap SCSS import
@@ -68,219 +68,408 @@ $container-max-widths: (sm: 540px,
 
 
 html {
-    height: 100%;
+	height: 100%;
 }
 
 body {
-    height: 100%;
-    //    font-family: 'Rubik', sans-serif;
-    position: relative;
-    background-color: #f7f8fc;
-    background-size: 100px;
-    background-repeat: no-repeat;
-    background-position: 100% -10px;
-    padding-top: 90px;
+	height: 100%;
+	//    font-family: 'Rubik', sans-serif;
+	position: relative;
+	background-color: #f7f8fc;
+	background-size: 100px;
+	background-repeat: no-repeat;
+	background-position: 100% -10px;
+	padding-top: 90px;
+	text-align: center;
 }
 
 img {
-    max-width: 100%;
+	max-width: 100%;
+}
+
+h2 {
+	font-size: 48px;
+	margin-bottom: 25px;
 }
 
 h3 {
-    font-size: 48px;
-    margin-bottom: 25px;
+	font-size: 35px;
+	margin-bottom: 25px;
+}
+
+h4,
+h5 {
+	font-family: $primary-font;
 }
 
 .font {
-    &-primary {
-        font-family: $primary-font;
-    }
+	&-primary {
+		font-family: $primary-font;
+	}
 
-    &-secondary {
-        font-family: $secondary-font;
-    }
+	&-secondary {
+		font-family: $secondary-font;
+	}
 }
 
 p {
-    margin-bottom: 25px;
+	margin-bottom: 25px;
 }
 
 a {
-    color: $secondary;
+	color: $secondary;
 
-    &:hover {
-        color: darken($secondary, 5%);
-    }
+	&:hover {
+		color: darken($secondary, 5%);
+	}
 }
 
 .btn {
-    border-radius: 4px !important;
-    min-width: 190px;
-    padding: 10px;
-    font-size: 16px;
+	border-radius: 4px !important;
+	min-width: 190px;
+	padding: 10px;
+	font-size: 16px;
 }
 
 .navbar {
-    min-height: 90px;
+	min-height: 90px;
 
-    .navbar-brand {
-        img {
-            height: auto;
-            width: 120px;
-        }
-    }
+	.navbar-brand {
+		img {
+			height: auto;
+			width: 120px;
+		}
+	}
 
-    .navbar-nav > a,
-    .nav-item > a {
-        padding: 0 20px !important;
-        letter-spacing: 0.3px;
-    }
+	.navbar-nav > a,
+	.nav-item > a {
+		padding: 0 20px !important;
+		letter-spacing: 0.3px;
+	}
 
-    .dropdown-toggle {
-        &::after {
-            vertical-align: 0.1em;
-        }
-    }
+	.dropdown-toggle {
+		&::after {
+			vertical-align: 0.1em;
+		}
+	}
 
-    &.navbar-light {
-        .navbar-nav {
-            .nav-link {
-                color: #000;
-            }
-        }
-    }
+	&.navbar-light {
+		.navbar-nav {
+			.nav-link {
+				color: #000;
+			}
+		}
+	}
 
-    .mega-menu {
-        position: static;
+	.mega-menu {
+		position: static;
 
-        .dropdown-menu {
-            width: 100%;
-            left: 0;
-            right: 0;
-            top: 90px;
-            background: #145970;
-            border-radius: 0;
-            min-height: 300px;
-            margin: 0;
-            color: #fff;
-            padding: 30px 0;
+		.dropdown-menu {
+			width: 100%;
+			left: 0;
+			right: 0;
+			top: 90px;
+			background: #145970;
+			border-radius: 0;
+			min-height: 300px;
+			margin: 0;
+			color: #fff;
+			padding: 30px 0;
 
-            .container {
-                display: block;
-            }
+			.container {
+				display: block;
+			}
 
-            h5 {
-                border-bottom: 1px solid #104557;
-                display: inline-block;
-                padding-bottom: 5px;
-                letter-spacing: 0.5px;
-            }
+			h5 {
+				border-bottom: 1px solid #104557;
+				display: inline-block;
+				padding-bottom: 5px;
+				letter-spacing: 0.5px;
+			}
 
-            a {
-                color: #fff;
-                text-decoration: none;
+			a {
+				color: #fff;
+				text-decoration: none;
 
-                &:hover {
-                    text-decoration: underline;
-                }
-            }
+				&:hover {
+					text-decoration: underline;
+				}
+			}
 
-            ul {
-                padding: 0;
-                margin: 0;
-                margin-top: 15px;
+			ul {
+				padding: 0;
+				margin: 0;
+				margin-top: 15px;
 
-                li {
-                    list-style-type: none;
-                    margin-bottom: 7px;
-                }
-            }
-        }
-    }
+				li {
+					list-style-type: none;
+					margin-bottom: 7px;
+				}
+			}
+		}
+	}
 }
 
 .carousel {
-    .carousel-item {
-        height: 568px !important;
-        background-size: cover;
-        background-position: center;
+	.carousel-item {
+		height: 568px !important;
+		background-size: cover;
+		background-position: center;
 
-        .carousel-caption {
-            position: static;
-            //            width: 50%;
-            text-align: left;
-            height: 100%;
-            display: flex;
-            align-items: center;
+		.carousel-caption {
+			position: static;
+			//            width: 50%;
+			text-align: left;
+			height: 100%;
+			display: flex;
+			align-items: center;
 
-            .container > div {
-                width: 60%;
-            }
+			.container > div {
+				width: 60%;
+			}
 
-            .btn {
-                margin-bottom: 25px;
-            }
+			.btn {
+				margin-bottom: 25px;
+			}
 
-            &.dark {
-                color: #212529;
-            }
-        }
-    }
+			&.dark {
+				color: #212529;
+			}
+		}
+	}
 
-    .carousel-control-prev-icon {
-        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23FE9900' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
-    }
+	.carousel-control-prev-icon {
+		background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23FE9900' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+	}
 
-    .carousel-control-next-icon {
-        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23FE9900' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
-    }
+	.carousel-control-next-icon {
+		background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23FE9900' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+	}
 
-    .carousel-control-prev,
-    .carousel-control-next {
-        opacity: 1;
-    }
+	.carousel-control-prev,
+	.carousel-control-next {
+		opacity: 1;
+	}
 }
 
 .section {
-    padding: 120px 0;
+	padding: 120px 0;
 
-    * {
-        text-align: center;
-    }
+	&.with-background {
+		background-position: center center;
+		background-size: cover;
+		background-repeat: no-repeat;
+		position: relative;
+		z-index: 1;
+
+		&:before {
+			content: '';
+			position: absolute;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			background-color: #135a70bf;
+			z-index: -1;
+		}
+	}
+
+	* {
+		//		text-align: center;
+	}
+
+	.text-left * {
+		text-align: left;
+	}
+
+	.text-right * {
+		text-align: right;
+	}
+
+	&.section-sm {
+		padding: 60px 0;
+	}
+
+	.section-image {
+		width: 100%;
+		height: 100%;
+		background-position: center center;
+		background-size: cover;
+		background-repeat: no-repeat;
+	}
+
+	.section-content {
+		max-width: 555px;
+		padding-top: 120px;
+		padding-bottom: 120px;
+
+		&.right {
+			padding-left: 50px;
+		}
+
+		&.left {
+			padding-right: 50px;
+		}
+	}
 }
 
-.partners img {
-    max-width: 200px;
-    margin: 0 23px;
+.partners {
+	.flex-fill {
+		margin: 0 20px;
+	}
+
+	img {
+		height: 50px;
+		width: 200px;
+	}
 }
 
 .footer {
-    padding: 60px 0;
-    background: $primary;
-    color: $white;
+	padding: 60px 0;
+	background: $primary;
+	color: $white;
+	text-align: left;
 
-    .App-logo {
-        height: auto;
-        width: 120px;
-    }
+	.App-logo {
+		height: auto;
+		width: 120px;
+	}
 
-    p {
-        margin: 0;
-    }
+	p {
+		margin: 0;
+	}
 
-    .d-flex div {
-        width: 25%;
-        display: flex;
-        align-items: center;
-        padding: 5px;
-    }
+	.d-flex div {
+		width: 25%;
+		display: flex;
+		align-items: center;
+		padding: 5px;
+	}
 
-    ul {
-        padding-left: 20px;
-    }
+	ul {
+		padding-left: 20px;
+	}
 }
 
 .bottom-bar {
-    background: darken($primary, 10%);
-    padding: 20px 0;
+	background: darken($primary, 10%);
+	padding: 20px 0;
+}
+
+.boxes {
+	padding: 30px 0;
+
+	.card {
+		position: relative;
+		z-index: 1;
+		overflow: hidden;
+		-webkit-transition: 0.5s;
+		transition: 0.5s;
+		background-position: center center;
+		background-size: cover;
+		background-repeat: no-repeat;
+		height: calc(100% - 30px);
+		margin-bottom: 30px;
+		color: initial;
+//		border: 0;
+		.card-body {
+			//			text-align: left;
+
+			.icon {
+				margin-bottom: 21px;
+				text-align: center;
+				width: 75px;
+				height: 75px;
+				line-height: 75px;
+				border-radius: 70% 30% 30% 70% / 60% 40% 60% 40%;
+				background-color: #ffffff;
+				color: #fe9901;
+				font-size: 30px;
+				-webkit-transition: 0.5s;
+				transition: 0.5s;
+				-webkit-box-shadow: 0 10px 55px 5px rgba(137, 173, 255, 0.2);
+				box-shadow: 0 10px 55px 5px rgba(137, 173, 255, 0.2);
+				margin-left: auto;
+				margin-right: auto;
+			}
+		}
+
+		&::before {
+			content: '';
+			position: absolute;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+//			background-color: #ffffff;
+			z-index: -1;
+			-webkit-transition: 0.5s;
+			transition: 0.5s;
+		}
+
+		&:hover {
+			border-color: #fe9901;
+			.icon {
+				border-radius: 50%;
+			}
+
+			&:before {
+				background-color: #fe9901;
+				opacity: .80;
+			}
+		}
+	}
+
+	&.boxesv2 {
+		.card {
+			background: none;
+//			border: 0;
+
+			.icon {
+//				background-color: #0f4a5d;
+//				color: #fe9901;
+//				-webkit-box-shadow: 0 10px 55px 5px rgb(15, 73, 93);
+//				box-shadow: 0 10px 55px 5px rgb(15, 73, 93);
+			}
+
+			&::before {
+				background-color: transparent;
+			}
+
+			&:hover {
+				.icon {
+					border-radius: 50%;
+				}
+
+				&:before {
+					background-color: transparent;
+				}
+			}
+		}
+	}
+}
+
+.card {
+	height: 100%;
+}
+
+.certifications {
+	padding-bottom: 30px;
+
+	.card-body {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		img {
+			max-height: 40px;
+		}
+	}
+}
+
+ul li {
+	margin-bottom: 16px;
+	position: relative;
+	padding-left: 34px;
+	display: block;
 }
