--- a/src/App.scss
+++ b/src/App.scss
@@ -330,7 +330,7 @@ a {
     padding-right: 15px;
     padding-bottom: 15px;
     flex: 0 50%;
-    img{
+    img {
       border-radius: 5px;
     }
   }
@@ -339,6 +339,43 @@ a {
     padding-left: 0px;
     li {
       display: block;
+    }
+  }
+  .social-icons {
+    li {
+      display: inline-block;
+      font-size: 30px;
+      margin-right: 10px;
+      &.facebook a {
+        color: #3b5a9a;
+      }
+      &.linkedin a {
+        color: #0172ae;
+      }
+      &.instagram a {
+        color: #dd2b7c;
+      }
+      &.twitter a {
+        color: #1fa1f3;
+      }
+      a {
+        position: relative;
+        z-index: 1;
+        &:before {
+          background: #fff;
+          padding: 0px 4px;
+          content: "";
+          height: 25px;
+          width: 25px;
+          position: absolute;
+          z-index: -1;
+          border-radius: 4px;
+          top: 5px;
+        }
+        &:hover {
+          color: #fe9900;
+        }
+      }
     }
   }
 }
