--- a/src/App.scss
+++ b/src/App.scss
@@ -94,6 +94,9 @@ h5 {
 
 p {
   margin-bottom: 25px;
+  &:last-child{
+    margin: 0;
+  }
 }
 
 a {
@@ -246,16 +249,16 @@ a {
     position: relative;
     z-index: 1;
 
-    &:before {
-      content: "";
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: #135a70bf;
-      z-index: -1;
-    }
+    // &:before {
+    //   content: "";
+    //   position: absolute;
+    //   left: 0;
+    //   top: 0;
+    //   width: 100%;
+    //   height: 100%;
+    //   background-color: #135a70bf;
+    //   z-index: -1;
+    // }
   }
 
   * {
