--- a/src/App.scss
+++ b/src/App.scss
@@ -336,7 +336,7 @@ a {
     align-items: center;
     padding-right: 15px;
     padding-bottom: 15px;
-    flex: 0 50%;
+    flex: 0 35%;
     img {
       border-radius: 5px;
     }
@@ -378,6 +378,7 @@ a {
           z-index: -1;
           border-radius: 4px;
           top: 5px;
+          box-shadow: 0px 0px 14px -2px #0000004d;
         }
         &:hover {
           color: #fe9900;
