--- a/src/App.scss
+++ b/src/App.scss
@@ -67,7 +67,7 @@ img {
   max-width: 100%;
 }
 
-h2 {
+h1 {
   font-size: 48px;
   margin-bottom: 25px;
 }
@@ -293,6 +293,10 @@ a {
     max-width: 555px;
     padding-top: 120px;
     padding-bottom: 120px;
+    &.section-content-sm {
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
 
     &.right {
       padding-left: 50px;
@@ -300,6 +304,9 @@ a {
 
     &.left {
       padding-right: 50px;
+    }
+    &.wide {
+      max-width: 705px;
     }
   }
 }
@@ -312,6 +319,7 @@ a {
   img {
     height: 50px;
     width: 200px;
+    object-fit: contain;
   }
 }
 
@@ -348,41 +356,43 @@ a {
       display: block;
     }
   }
-  .social-icons {
-    li {
-      display: inline-block;
-      font-size: 30px;
-      margin-right: 10px;
-      &.facebook a {
-        color: #3b5a9a;
+}
+.social-icons {
+  padding: 0;
+  margin: 0;
+  li {
+    display: inline-block !important;
+    font-size: 30px;
+    margin-right: 10px;
+    &.facebook a {
+      color: #3b5a9a;
+    }
+    &.linkedin a {
+      color: #0172ae;
+    }
+    &.instagram a {
+      color: #dd2b7c;
+    }
+    &.twitter a {
+      color: #1fa1f3;
+    }
+    a {
+      position: relative;
+      z-index: 1;
+      &:before {
+        background: #fff;
+        padding: 0px 4px;
+        content: "";
+        height: 25px;
+        width: 25px;
+        position: absolute;
+        z-index: -1;
+        border-radius: 4px;
+        top: 5px;
+        box-shadow: 0px 0px 14px -2px #0000004d;
       }
-      &.linkedin a {
-        color: #0172ae;
-      }
-      &.instagram a {
-        color: #dd2b7c;
-      }
-      &.twitter a {
-        color: #1fa1f3;
-      }
-      a {
-        position: relative;
-        z-index: 1;
-        &:before {
-          background: #fff;
-          padding: 0px 4px;
-          content: "";
-          height: 25px;
-          width: 25px;
-          position: absolute;
-          z-index: -1;
-          border-radius: 4px;
-          top: 5px;
-          box-shadow: 0px 0px 14px -2px #0000004d;
-        }
-        &:hover {
-          color: #fe9900;
-        }
+      &:hover {
+        color: #fe9900;
       }
     }
   }
@@ -505,4 +515,16 @@ a {
 }
 .container-fluid {
   padding: 0 50px;
+}
+.team {
+  img {
+    border-radius: 5px;
+    margin-bottom: 20px;
+  }
+  p {
+    margin: 0;
+  }
+  .social-icons li {
+    margin: 0;
+  }
 }
