--- a/src/App.scss
+++ b/src/App.scss
@@ -317,8 +317,8 @@ a {
   }
 
   img {
-    height: 50px;
-    width: 200px;
+    height: 40px;
+    width: 180px;
     object-fit: contain;
   }
 }
@@ -526,5 +526,21 @@ a {
   }
   .social-icons li {
     margin: 0;
+  }
+}
+.certification-list {
+  .certificate {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    font-weight: 600;
+    margin-right: -1px;
+    border: 1px solid #cccccc;
+    margin-bottom: 30px;
+    border-radius: 5px;
+    img {
+      width: 70px;
+      margin-right: 20px;
+    }
   }
 }
