Added css for nav-link class

--- a/src/App.scss
+++ b/src/App.scss
@@ -144,6 +144,10 @@ a {
         &:hover {
           color: #135a70 !important;
         }
+        &.active{
+          color: #135a70 !important;
+        }
+
       }
     }
   }
