--- a/src/App.scss
+++ b/src/App.scss
@@ -268,16 +268,16 @@ a {
     position: relative;
     z-index: 1;
 
-    // &:before {
-    //   content: "";
-    //   position: absolute;
-    //   left: 0;
-    //   top: 0;
-    //   width: 100%;
-    //   height: 100%;
-    //   background-color: #135a70bf;
-    //   z-index: -1;
-    // }
+    &.with-overlay:before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #000000bf;
+      z-index: -1;
+    }
   }
 
   * {
